# LilysMediaPlayer

./: CMakeLists.txt  LilysMediaPlayer.sln  README.md
Core/: Core.vcxproj  Core.vcxproj.filters
Core/Resource/Shaders/: FragmentShader.frag  VertexShader.vert
Core/include/: Test.h
Core/include/Input/: Input.cpp  Input.h
Core/include/Rendering/: Camera.h  Renderer.h  RenderingLayer.h  Shader.h  Texture.h
Core/include/Utils/: Time.h
Core/src/: Core.cpp  Test.cpp  glad.c
Core/src/Input/: Input.cpp
Core/src/Rendering/: Camera.cpp  Renderer.cpp  Renderer.mm  RenderingLayer.cpp  Shader.cpp  Texture.cpp
Core/src/Utils/: Time.cpp
Dependencies/: CMakeLists.txt
Dependencies/GLAD/: CMakeLists.txt
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
Dependencies/GLFW/: CMakeLists.txt
Dependencies/GLFW/src/: glfw.cpp
Dependencies/GLM/include/glm/: CMakeLists.txt
Dependencies/METAL/: CMakeLists.txt
Dependencies/STB_Image/: CMakeLists.txt
